Fix wrong package name. Add keyword

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@selfage/once",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Calling functions only once.",
   "repository": {
     "type": "git",
@@ -14,7 +14,8 @@
     "Delay",
     "Defer",
     "Function",
-    "Once"
+    "Once",
+    "TypeScript"
   ],
   "author": "Yuxuan Xie <teststaybaka@gmail.com> (http://www.yuxuanxie.com)",
   "license": "GPL-3.0-or-later",
