--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@selfage/once",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Calling functions only once.",
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "!test_data/**/*"
   ],
   "devDependencies": {
+    "@selfage/cli": "^2.3.2",
     "@selfage/test_matcher": "^1.0.6",
     "@selfage/test_runner": "^2.1.0",
     "@selfage/tsconfig": "^1.0.7",
