--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@selfage/once",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Calling functions only once.",
   "repository": {
     "type": "git",
@@ -18,7 +18,7 @@
     "TypeScript"
   ],
   "author": "Yuxuan Xie <teststaybaka@gmail.com> (http://www.yuxuanxie.com)",
-  "license": "GPL-3.0-or-later",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/selfage/once/issues"
   },
@@ -32,10 +32,10 @@
     "!test_data/**/*"
   ],
   "devDependencies": {
-    "@selfage/cli": "^2.3.2",
-    "@selfage/test_matcher": "^1.0.6",
-    "@selfage/test_runner": "^2.1.0",
-    "@selfage/tsconfig": "^1.0.7",
-    "typescript": "^4.3.5"
+    "@selfage/cli": "^5.0.0",
+    "@selfage/test_matcher": "^2.1.8",
+    "@selfage/test_runner": "^5.0.2",
+    "@selfage/tsconfig": "^1.1.0",
+    "typescript": "^5.6.3"
   }
 }
